# agentdown

./: .gitignore  .npmignore  README.en.md  README.md  Vue-Pretext-Markdown_Design_Plan.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  tsconfig.types.json  vite.config.ts
.github/workflows/: docs.yml
backend/: .env.example  README.md  pyproject.toml  run.py
backend/app/: __init__.py  agno_state.py  autogen_state.py  live_weather.py  main.py  models.py  settings.py  sse.py
backend/app/providers/: __init__.py  agno.py  autogen.py  base.py  crewai.py  langchain.py
backend/scripts/: smoke_crewai.py  smoke_langchain.py
docs/: AGENT_PROTOCOL.md  RELEASE_CHECKLIST.md  ROADMAP.md  index.md
docs/.vitepress/: config.ts
docs/api/: adapters.md  events.md  markdown-renderer.md  renderer.md  run-surface.md  runtime.md  types.md
docs/examples/: team-mode.md
docs/guide/: agno-adapter.md  backend-fastapi.md  component-overrides.md  core-concepts.md  custom-framework.md  framework-adapters.md  framework-capability-matrix.md  getting-started.md  markdown-rendering.md  performance.md  run-surface.md  streaming-markdown.md
docs/reference/: adapter-kit-2-rfc.md  faq.md  release.md  roadmap.md  v1-design.md  v2-design.md  v2-task-list.md
docs/runtime/: overview.md  protocol.md  reducer.md
scripts/: benchmark-streaming-markdown.mjs
spring-backend/: .gitignore  README.md  pom.xml
src/: index.ts
src/adapters/: agno.test.ts  autogen.test.ts  crewai.test.ts  eventActionsHelpers.test.ts  eventComponentRegistry.ts  (+5 more)
(+279 files in other folders)
